Update worker args to use --tensor-parallel-size instead of --worker-type
- Remove --worker-type prefill/decode flags from both workers
- Add --tensor-parallel-size 1 to both VllmPrefillWorker and VllmDecodeWorker
- Disaggregation happens automatically via DYN_ROUTER_MODE and worker names
- Updated both main deployment and appendix sections

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6a4b4d4",
+   "id": "be98381d",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63323ada",
+   "id": "6eaf4f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98ef48e",
+   "id": "d332a0fa",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caaafb86",
+   "id": "47610aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865a92eb",
+   "id": "dfeabf7b",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98792b3b",
+   "id": "b5a17e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff14176b",
+   "id": "1d5bb64a",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89bd58da",
+   "id": "85cd1feb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e01bd3d",
+   "id": "02cb7fae",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193afdf7",
+   "id": "c9b49a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74971aab",
+   "id": "665c3d3b",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80e8ed46",
+   "id": "bc62f44e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df9cb1b",
+   "id": "86f5e8b0",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fdd4121",
+   "id": "e5bbc899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66370fac",
+   "id": "913b0b15",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36284a59",
+   "id": "a3bfb081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0671081",
+   "id": "96e0ff66",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c345d6ce",
+   "id": "41e7785f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d942b4",
+   "id": "39fa9bd7",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3de9151",
+   "id": "96a8351d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27f406c",
+   "id": "aea2f81a",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "991047c3",
+   "id": "24c298ab",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3400d31d",
+   "id": "8a37fcc9",
    "metadata": {},
    "source": [
     "\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb5aee8",
+   "id": "6e6d70a9",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "367c1152",
+   "id": "35a41532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
     "            - /bin/sh\n",
     "            - -c\n",
     "          args:\n",
-    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --worker-type prefill\n",
+    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1\n",
     "    VllmDecodeWorker:\n",
     "      envFromSecret: hf-token-secret\n",
     "      dynamoNamespace: vllm-disagg-router\n",
@@ -657,7 +657,7 @@
     "            - /bin/sh\n",
     "            - -c\n",
     "          args:\n",
-    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --worker-type decode\n",
+    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1\n",
     "EOF\n",
     "\n",
     "echo \"✓ Deployment manifest created: disagg_router.yaml\"\n",
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b3c9cf",
+   "id": "b7fac6df",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a0b483",
+   "id": "26b15491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1adc88",
+   "id": "6f9d9651",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7942b440",
+   "id": "0ac23ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3d881b",
+   "id": "09a599b7",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19d66d5",
+   "id": "6500f471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156e6c30",
+   "id": "35f28e46",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44bd65c8",
+   "id": "083196c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476c96f3",
+   "id": "6baec7ea",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5ae3dd",
+   "id": "3a5c9c10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f2292c1",
+   "id": "173642fd",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14ce452",
+   "id": "e5bd2534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32190f1",
+   "id": "7bf6224b",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d365c9c",
+   "id": "8eeaa165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11a4d97",
+   "id": "5ae6de7b",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c290ee6",
+   "id": "8e407c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf6e421",
+   "id": "6dc79839",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44adf366",
+   "id": "d4987378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d3abfc9",
+   "id": "3a8cec00",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4403f2a1",
+   "id": "13bf778e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329430fa",
+   "id": "023f4250",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6e367a7",
+   "id": "986b59a0",
    "metadata": {},
    "source": [
     "---\n",
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3cff92",
+   "id": "48108dcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca7219e",
+   "id": "932658f3",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb31c26",
+   "id": "582f2840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23565898",
+   "id": "316dce56",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715ee681",
+   "id": "f514dd99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65904199",
+   "id": "15fbdc1a",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c3eb18",
+   "id": "0d69ecc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8381c08",
+   "id": "e35404bd",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05b075b",
+   "id": "0d97c84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105497e7",
+   "id": "5e61a82c",
    "metadata": {},
    "source": [
     "### A0. Troubleshooting Pod Issues\n",
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4fe815",
+   "id": "8db04171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b020457",
+   "id": "694fbf1f",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f17357",
+   "id": "100e05b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b5a598",
+   "id": "583b486d",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7ea828",
+   "id": "ec46e4a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811ac0a2",
+   "id": "63b71c54",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1530,7 +1530,7 @@
     "            - /bin/sh\n",
     "            - -c\n",
     "          args:\n",
-    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --worker-type prefill\n",
+    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1\n",
     "    VllmDecodeWorker:\n",
     "      envFromSecret: hf-token-secret\n",
     "      dynamoNamespace: vllm-disagg-router\n",
@@ -1562,7 +1562,7 @@
     "            - /bin/sh\n",
     "            - -c\n",
     "          args:\n",
-    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --worker-type decode\n",
+    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1\n",
     "```\n",
     "\n",
     "Deploy the model:\n"
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a3cee59",
+   "id": "baff8f4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd13401",
+   "id": "368231a6",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50cd4d07",
+   "id": "4c147429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa4aca9d",
+   "id": "6041134c",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514f634c",
+   "id": "045a3c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e12df5",
+   "id": "63ee0648",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1680,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7627bbae",
+   "id": "7c96af3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "411dce9d",
+   "id": "06b8b8db",
    "metadata": {},
    "source": [
     "### A7. Cleanup (⚠️ ONLY AFTER COMPLETING ALL LABS)\n",
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e0ecfd",
+   "id": "ea8d7a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a870718d",
+   "id": "bb92d2f1",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92ddb68",
+   "id": "df47465b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e22406",
+   "id": "0a2bd0c8",
    "metadata": {},
    "source": [
     "\n"
