--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "514f5168",
+   "id": "5e6e2b83",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e52e36",
+   "id": "53c5fc53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8659b41d",
+   "id": "6eb1e77c",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19704ca8",
+   "id": "f4c08d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508c5ee9",
+   "id": "6f93a044",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b356b463",
+   "id": "5b43f437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f7ed2ec",
+   "id": "e852d1b8",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c522850a",
+   "id": "33880055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820ab488",
+   "id": "a6777fe3",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f55aca8",
+   "id": "962a8726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,9 +254,9 @@
     "    \n",
     "    # Ensure they have the required label for Prometheus discovery\n",
     "    echo \"Labeling for Prometheus discovery...\"\n",
-    "    kubectl label podmonitor -n $NAMESPACE dynamo-frontend release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
-    "    kubectl label podmonitor -n $NAMESPACE dynamo-planner release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
-    "    kubectl label podmonitor -n $NAMESPACE dynamo-worker release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    kubectl label podmonitor dynamo-frontend -n $NAMESPACE release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    kubectl label podmonitor dynamo-planner -n $NAMESPACE release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    kubectl label podmonitor dynamo-worker -n $NAMESPACE release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
     "    \n",
     "    echo \"\"\n",
     "    echo \"✓ PodMonitors ready - Prometheus will scrape metrics within 1-2 minutes\"\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5ae6a5",
+   "id": "cff6bdff",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f83d23bb",
+   "id": "a12d5334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb1ee08",
+   "id": "8212e708",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd1bb7e",
+   "id": "4c5c784a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcf689e",
+   "id": "4ecccd2e",
    "metadata": {},
    "source": [
     "---\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b14b845",
+   "id": "76823139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7930517",
+   "id": "6c0f110f",
    "metadata": {},
    "source": [
     "---\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7baed40",
+   "id": "9bd8ede4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83fad46c",
+   "id": "5bcedfac",
    "metadata": {},
    "source": [
     "---\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550aaa4d",
+   "id": "d64fb5fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c6b931",
+   "id": "232f1e7d",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f7788c4",
+   "id": "21eced67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd3282da",
+   "id": "eca9f093",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0551f9",
+   "id": "18fcb5ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bfe144c",
+   "id": "51cca1dc",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aaf7c4f",
+   "id": "817cf59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0812d06a",
+   "id": "75536b0b",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efffaae8",
+   "id": "07cf9b43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ebc940",
+   "id": "b9b843a1",
    "metadata": {},
    "source": [
     "---\n",
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3e7a99",
+   "id": "04c95919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e1ad87",
+   "id": "a22fe819",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a324fd",
+   "id": "bffc2782",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41420aa0",
+   "id": "aa62704c",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a8f286",
+   "id": "f651db0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f75d3ca",
+   "id": "fe333c40",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e223f7",
+   "id": "2297d086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0440cffa",
+   "id": "8ae1c011",
    "metadata": {},
    "source": [
     "---\n",
@@ -1107,9 +1107,6 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
