Add export to all NAMESPACE variables in monitoring notebook
- Fixed 4 bash cells to use export NAMESPACE
- Added quotes to label selector in kubectl get pods command
- Ensures consistency with Lab 1 patterns

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e6e2b83",
+   "id": "89581064",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c5fc53",
+   "id": "605eb273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eb1e77c",
+   "id": "fc1c2f3f",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,12 +107,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c08d55",
+   "id": "2fe0cba2",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"Checking Lab 1 deployment...\"\n",
     "echo \"\"\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f93a044",
+   "id": "dcd6ea75",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b43f437",
+   "id": "a29da05e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e852d1b8",
+   "id": "88454437",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,14 +206,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33880055",
+   "id": "0edddd71",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
     "# Check if your Dynamo pods have metrics labels\n",
     "echo \"Checking Dynamo pod labels:\"\n",
-    "kubectl get pods -n $NAMESPACE -l nvidia.com/metrics-enabled=true --show-labels\n",
+    "kubectl get pods -n $NAMESPACE -l \"nvidia.com/metrics-enabled=true\" --show-labels\n",
     "\n",
     "echo \"\"\n",
     "echo \"Look for labels: nvidia.com/metrics-enabled=true\""
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6777fe3",
+   "id": "d2ec29b8",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -232,12 +234,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962a8726",
+   "id": "614d485a",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"Checking PodMonitors...\"\n",
     "kubectl get podmonitor -n $NAMESPACE\n",
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff6bdff",
+   "id": "18df6307",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -279,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12d5334",
+   "id": "87d70efc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8212e708",
+   "id": "20d0f267",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -311,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c5c784a",
+   "id": "9f5af0c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecccd2e",
+   "id": "d1d96715",
    "metadata": {},
    "source": [
     "---\n",
@@ -371,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76823139",
+   "id": "aa235ab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0f110f",
+   "id": "7d49a9b7",
    "metadata": {},
    "source": [
     "---\n",
@@ -456,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd8ede4",
+   "id": "013dbe94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bcedfac",
+   "id": "75e45e3d",
    "metadata": {},
    "source": [
     "---\n",
@@ -519,12 +521,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d64fb5fc",
+   "id": "b44de838",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "GRAFANA_URL=\"http://$(hostname -I | awk '{print $1}'):30300\"\n",
     "\n",
     "# Create Planner dashboard ConfigMap\n",
@@ -596,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "232f1e7d",
+   "id": "bf5d09ea",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -605,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21eced67",
+   "id": "a6ea53f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca9f093",
+   "id": "3bb94a8a",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -662,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18fcb5ca",
+   "id": "7d2ecac2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cca1dc",
+   "id": "c81b4c01",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -862,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817cf59d",
+   "id": "ba2647a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75536b0b",
+   "id": "e7fd5ceb",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -912,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cf9b43",
+   "id": "fcb7a5c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b843a1",
+   "id": "96c1a934",
    "metadata": {},
    "source": [
     "---\n",
@@ -992,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c95919",
+   "id": "b812cbe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22fe819",
+   "id": "d06c7c63",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1020,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffc2782",
+   "id": "3a56488d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa62704c",
+   "id": "77c58c93",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1048,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f651db0c",
+   "id": "f3dddf3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe333c40",
+   "id": "7d9700a8",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1072,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2297d086",
+   "id": "1ee3dd34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae1c011",
+   "id": "854b495d",
    "metadata": {},
    "source": [
     "---\n",
