--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89581064",
+   "id": "6cba80b6",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605eb273",
+   "id": "b0fed432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1c2f3f",
+   "id": "1ff651c6",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fe0cba2",
+   "id": "c585e809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd6ea75",
+   "id": "50519280",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29da05e",
+   "id": "dc5455fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88454437",
+   "id": "7063bfbd",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edddd71",
+   "id": "37dfd26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ec29b8",
+   "id": "5433b390",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614d485a",
+   "id": "e68c9805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18df6307",
+   "id": "d9d01d31",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -281,11 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d70efc",
+   "id": "1e7b6ab0",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
     "# Get the frontend pod name\n",
     "FRONTEND_POD=$(kubectl get pods -n $NAMESPACE | grep frontend | head -1 | awk '{print $1}')\n",
     "\n",
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d0f267",
+   "id": "5ce8e3a7",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -313,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5af0c1",
+   "id": "7c365067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1d96715",
+   "id": "2cf093e5",
    "metadata": {},
    "source": [
     "---\n",
@@ -373,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa235ab4",
+   "id": "a20c94a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d49a9b7",
+   "id": "84e6d3ec",
    "metadata": {},
    "source": [
     "---\n",
@@ -458,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013dbe94",
+   "id": "96f200a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e45e3d",
+   "id": "187d75e2",
    "metadata": {},
    "source": [
     "---\n",
@@ -521,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44de838",
+   "id": "2095f1ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5d09ea",
+   "id": "9bb27e90",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -607,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6ea53f4",
+   "id": "a7998ead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb94a8a",
+   "id": "0ad29c65",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -664,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2ecac2",
+   "id": "f876a1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81b4c01",
+   "id": "c7d742c0",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -864,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2647a9",
+   "id": "ec3cf7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7fd5ceb",
+   "id": "d02a1464",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -914,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb7a5c3",
+   "id": "d366f277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c1a934",
+   "id": "90b17d65",
    "metadata": {},
    "source": [
     "---\n",
@@ -994,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b812cbe4",
+   "id": "d4b49e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06c7c63",
+   "id": "f0609d2c",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1022,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a56488d",
+   "id": "c533e466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c58c93",
+   "id": "20dbd658",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1050,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3dddf3f",
+   "id": "79cef7dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9700a8",
+   "id": "f06890f7",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1074,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee3dd34",
+   "id": "3e3dbcc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854b495d",
+   "id": "760140f3",
    "metadata": {},
    "source": [
     "---\n",
