Fix dashboard import: add exports and correct file path
- Add export NAMESPACE and export GRAFANA_URL
- Fix path from ~/dynamo-brev/resources/ to resources/
- Now correctly points to dynamo-inference-dashboard.json in this repo
- Fixes 'No such file or directory' error

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cba80b6",
+   "id": "cc81bdc0",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0fed432",
+   "id": "0424b1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff651c6",
+   "id": "2d96e1d6",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c585e809",
+   "id": "0b8a03e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50519280",
+   "id": "53def63b",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc5455fa",
+   "id": "dfa0d906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7063bfbd",
+   "id": "cb94620c",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37dfd26f",
+   "id": "7db35b5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5433b390",
+   "id": "55e42b07",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68c9805",
+   "id": "9edcff8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d01d31",
+   "id": "b13201a1",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7b6ab0",
+   "id": "ea699e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce8e3a7",
+   "id": "06215e8e",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c365067",
+   "id": "17884985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf093e5",
+   "id": "02fac972",
    "metadata": {},
    "source": [
     "---\n",
@@ -375,11 +375,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20c94a9",
+   "id": "a84ad6c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export GRAFANA_URL=${GRAFANA_URL:-\"http://$(hostname -I | awk '{print $1}'):30080\"}\n",
+    "\n",
     "# Create ConfigMap with dashboard JSON\n",
     "echo \"Deploying Dynamo Inference Dashboard to $NAMESPACE...\"\n",
     "\n",
@@ -396,7 +399,7 @@
     "EOF\n",
     "\n",
     "# Add dashboard JSON with proper indentation\n",
-    "sed 's/^/    /' ~/dynamo-brev/resources/dynamo-inference-dashboard.json >> /tmp/dynamo-inference-dashboard-configmap.yaml\n",
+    "sed 's/^/    /' resources/dynamo-inference-dashboard.json >> /tmp/dynamo-inference-dashboard-configmap.yaml\n",
     "\n",
     "# Apply ConfigMap\n",
     "kubectl apply -f /tmp/dynamo-inference-dashboard-configmap.yaml\n",
@@ -412,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e6d3ec",
+   "id": "24f625bb",
    "metadata": {},
    "source": [
     "---\n",
@@ -460,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f200a0",
+   "id": "8537cb19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187d75e2",
+   "id": "fefa8a88",
    "metadata": {},
    "source": [
     "---\n",
@@ -523,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2095f1ec",
+   "id": "3ea23e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb27e90",
+   "id": "b9eab035",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -609,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7998ead",
+   "id": "06cece2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad29c65",
+   "id": "8953e594",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -666,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f876a1f2",
+   "id": "68d988ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d742c0",
+   "id": "867725dd",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -866,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec3cf7f8",
+   "id": "050db92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d02a1464",
+   "id": "faf6ce06",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -916,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d366f277",
+   "id": "e6440ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b17d65",
+   "id": "f6ac5cb0",
    "metadata": {},
    "source": [
     "---\n",
@@ -996,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b49e25",
+   "id": "9a96f5ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0609d2c",
+   "id": "529057db",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1024,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c533e466",
+   "id": "92599d30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20dbd658",
+   "id": "6dd852d0",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1052,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79cef7dc",
+   "id": "9b77e426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f06890f7",
+   "id": "0113c912",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1076,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3dbcc0",
+   "id": "865e10d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760140f3",
+   "id": "61784011",
    "metadata": {},
    "source": [
     "---\n",
